--- a/README.rdoc
+++ b/README.rdoc
@@ -6,23 +6,14 @@ application up and running.
 Things you may want to cover:
 
 * Ruby version
+ using 2.1.5
 
-* System dependencies
+* How to run the tests
+  using cucumber, in the console:
+  cd project-folder
+  cucumber
 
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+* How to run the app
+  in the console:
+  cd project-folder
+  rails s
